@@ -1,5 +1,6 @@
 Search API 1.x, dev (xxxx-xx-xx):
 ---------------------------------
+- #2842971 by jespermb, borisson_: Fixed wrong URL for block search displays.
 - #2842546 by alan-ps: Fixed Drush commands for enabling and disabling indexes.
 - #2840675 by nicrodgers, drunken monkey: Added support for Views filters with
   option lists.
